samples/_failures_safe/1761702357_cd0b23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c628cefa.c: In function ‘main’:
./samples/SAFE/__tmp_c628cefa.c:162:5: error: expected declaration or statement at end of input
  162 |     printf("Compression ratio: %.2f%%\n", (1.0 - (double)output_buf.size / input_buf.size) * 100.0);
      |     ^~~~~~
